--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-three/fiber": "8.13.3",
     "@react-three/xr": "^5.7.1",
     "@types/three": "0.152.1",
+    "node-apriori": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.153.0"
+    "skmeans": "^0.11.3",
+    "three": "0.153.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
